HW_Kubernetes/13/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: app
  name: deployment-backend
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: multitool
          image: wbitt/network-multitool:f23a085
