HW_Kubernetes/13/cache.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: app
  name: deployment-cache
  labels:
    app: cache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cache
  template:
    metadata:
      labels:
        app: cache
    spec:
      containers:
        - name: multitool
          image: wbitt/network-multitool:f23a085
