HW_Kubernetes/13/svc-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-backend
  namespace: app
spec:
  ports:
    - name: web
      port: 80
  selector:
    app: backend
