HW_Kubernetes/13/svc-cache.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-cache
  namespace: app
spec:
  ports:
    - name: web
      port: 80
  selector:
    app: cache
