HW_Kubernetes/13/svc-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-frontend
  namespace: app
spec:
  ports:
    - name: web
      port: 80
  selector:
    app: frontend
