HW_Kubernetes/13/policy-block.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: all-deny-ingress
  namespace: app
spec:
  podSelector: {}
  policyTypes:
    - Ingress
